[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Menu/SaveMenu.gd" type="Script" id=1]

[node name="SaveMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveOptions" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -107.5
margin_right = 150.0
margin_bottom = 107.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Saves" type="Label" parent="SaveOptions"]
margin_right = 300.0
margin_bottom = 14.0
rect_min_size = Vector2( 300, 0 )
text = "SAVES"
align = 1
valign = 1

[node name="SaveSlots" type="ItemList" parent="SaveOptions"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 125 )

[node name="Save" type="Button" parent="SaveOptions"]
margin_top = 147.0
margin_right = 300.0
margin_bottom = 167.0
text = "SAVE"

[node name="Load" type="Button" parent="SaveOptions"]
margin_top = 171.0
margin_right = 300.0
margin_bottom = 191.0
text = "LOAD"

[node name="Close" type="Button" parent="SaveOptions"]
margin_top = 195.0
margin_right = 300.0
margin_bottom = 215.0
text = "CLOSE"

[connection signal="item_selected" from="SaveOptions/SaveSlots" to="." method="_on_SaveSlots_item_selected"]
[connection signal="pressed" from="SaveOptions/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="SaveOptions/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="SaveOptions/Close" to="." method="_on_Close_pressed"]
